# Quant-Recap-Analysis

./: .gitignore
B-因子构建类/机器学习/基于机器学习的AlphaGPT因子挖掘/: AlphaGPT_Workflow.ipynb  README.md  pyproject.toml  requirements.txt  run_qlib_backtest.py  train_ashare.py
B-因子构建类/机器学习/基于机器学习的AlphaGPT因子挖掘/model_core/: alphagpt.py  ashare_backtest.py  engine.py  factors.py  ops.py  qlib_loader.py  vm.py
B-按研究场景/机器学习因子/基于机器学习的AlphaGPT因子挖掘/: AlphaGPT.ipynb  README.md  joinquant_strategy.py  pyproject.toml  run_pipeline.py
B-按研究场景/机器学习因子/基于机器学习的AlphaGPT因子挖掘/exp/v0.1/: README.md  exp_log.md
B-按研究场景/机器学习因子/基于机器学习的AlphaGPT因子挖掘/exp/v0.2/: README.md  exp_log.md
B-按研究场景/机器学习因子/基于机器学习的AlphaGPT因子挖掘/exp/v0.3/: README.md  exp_log.md
B-按研究场景/机器学习因子/基于机器学习的AlphaGPT因子挖掘/model_core/: alphagpt.py  ashare_backtest.py  ashare_engine.py  engine.py  factors.py  ops.py  qlib_loader.py  run_backtest.py  signal_engine.py  vm.py
